[Refactor] html 구조 일부 수정

--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 <body>
     
     <!-- Header -->
-    <h1>오늘 뭐하지?</h1>
+    <header>
+        <h1>오늘 뭐하지?</h1>
+    </header>
 
     <!--할일 입력하기 -->
     <div class="inputSection">
-        <input id="todo">
-        <button id="addBtn">+</button>
+        <div class="input_box">
+            <input type="text" class="inputTxt">
+            <button id="addBtn">+</button>
+        </div>
     </div>
 
     <br>
