[Chore] 버튼 이름 수정

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 
         <!-- 전체보기/완료전/완료후 -->
         <div class="selectSection">
-            <input type="button" class="btn-all" value="전체 (0)">
-            <input type="button" class="btn-doing" value="진행중 (0)">
-            <input type="button" class="btn-done" value="완료 (0)">
+            <input type="button" class="btn-all" value="전체">
+            <input type="button" class="btn-doing" value="진행중">
+            <input type="button" class="btn-done" value="완료">
         </div>
 
         <!-- 할일 입력하기 -->
