[Style] 투두리스트 형식 변경

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <script defer src="main.js"></script>
 </head>
 <body>
-    
-    <!-- Header -->
-    <header>
-        <h1>오늘 뭐하지?</h1>
-    </header>
 
-    <!-- Body -->
-    <div>
+
+    <!-- 투두리스트 박스 -->
+    <div class="todoBox">
+
+        <!-- Header -->
+        <header>
+            <h1>오늘 뭐하지?🤔</h1>
+        </header>
                 
         <!-- 전체보기/완료전/완료후 -->
         <div class="selectSection">
