--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>나만의 다이어리 만들기</title>
+<title>나만의 다이어리 만들기</title>
     <link rel="stylesheet" href="style.css">
+    
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script> 
+    
     <script defer src="main.js"></script>
 </head>
 <body>
 
+    <div id="auth-ui" style="text-align: right; margin-right: 10%; padding-top: 20px;">
+        <button id="login-button">로그인</button>
+        <button id="logout-button" style="display: none;">로그아웃</button>
+    </div>
+
+    <div id="memo-app-container" style="display: none;">
 
     <!-- 투두리스트 박스 -->
     <div class="todoBox">
